# Minestormer

./: .clang-format  meson.build
src/: cell.cpp  cell.hpp  death.cpp  generation.cpp  generation.hpp  grid.cpp  grid.hpp  includes.hpp  main.cpp  sizing.cpp  sizing.hpp  textures.cpp  textures.hpp
subprojects/: .gitignore
